<resources>
    <string name="app_name">CloudPhone</string>
    <string name="mode_host">被控端 (Host Mode)</string>
    <string name="mode_controller">控制端 (Controller Mode)</string>
    <string name="server_url">信令服务器地址</string>
    <string name="server_url_hint">ws://192.168.1.100:8000</string>
    <string name="device_id">设备名称 / ID</string>
    <string name="device_id_hint">android-phone-01</string>
    <string name="auth_token">控制端 Token (User Token)</string>
    <string name="auth_token_hint">控制端连接使用的用户 Token</string>
    <string name="agent_secret">Agent 注册密钥 (Agent Secret)</string>
    <string name="agent_secret_hint">被控端注册信令所需的共享密钥</string>
    <string name="start_service">启动服务 (Start)</string>
    <string name="stop_service">停止服务 (Stop)</string>
    <string name="service_running">服务运行中</string>
    <string name="service_stopped">服务已停止</string>
    <string name="shizuku_status">Shizuku 权限: </string>
    <string name="shizuku_authorized">已授权 (Shell UID 2000)</string>
    <string name="shizuku_unavailable">未运行 / 未授权</string>
    <string name="request_shizuku">请求 Shizuku 权限</string>
    <string name="root_status">Root 权限: </string>
    <string name="root_granted">已获取 Root</string>
    <string name="root_unavailable">无 Root</string>
    <string name="standalone_mode">单机直连模式 (Embedded Server)</string>
    <string name="battery_optimization">请忽略电池优化以防后台被杀</string>
</resources>
